# vulnforge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.docker-bench  LICENSE  README.md  analyze_codeql_patterns.py  compose.dev.yaml  compose.example.yml  compose.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  (+4 more)
backend/: CODEQL_FINAL_RESULTS.md  CODEQL_FIXES_SUMMARY.md  CODEQL_ROUND3_RESULTS.md  Dockerfile.dev  TESTING_STATUS.md  TESTS_CANNOT_PASS.md  TEST_MIGRATION_SUMMARY.md  TEST_SUMMARY.md  pyproject.toml
backend/app/: config.py  database.py  db.py  main.py  validators.py
backend/app/api/: __init__.py  activity.py  api_keys.py  auth.py  compliance.py  containers.py  false_positive_patterns.py  image_compliance.py  maintenance.py  notifications.py  scans.py  secrets.py  settings.py  system.py  user_auth.py  vulnerabilities.py  widget.py
backend/app/data/: __init__.py  compliance_checks.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/middleware/: auth.py
backend/app/migrations/: 001_add_is_sensitive_and_category.py  002_add_is_my_project.py  003_add_cve_delta_tracking.py  004_add_user_authentication.py  005_add_api_keys.py  006_add_compliance_target.py  runner.py
backend/app/models/: __init__.py  activity_log.py  api_key.py  compliance_finding.py  compliance_scan.py  container.py  false_positive_pattern.py  image_compliance_finding.py  image_compliance_scan.py  notification_log.py  notification_rule.py  oidc_state.py  scan.py  secret.py  setting.py  user.py  vulnerability.py
backend/app/repositories/: __init__.py  activity_log_repository.py  container_repository.py  dependencies.py  false_positive_pattern_repository.py  scan_result_repository.py  secret_repository.py  vulnerability_repository.py
backend/app/routes/: activity.py  api_keys.py  compliance.py  containers.py  false_positive_patterns.py  image_compliance.py  maintenance.py  notifications.py  scans.py  settings.py  system.py  user_auth.py  vulnerabilities.py  widget.py
backend/app/schemas/: __init__.py  activity.py  api_key.py  compliance.py  container.py  notification.py  scan.py  secret.py  setting.py  user_auth.py  vulnerability.py  widget.py
backend/app/services/: __init__.py  activity_logger.py  api_key_service.py  cache_manager.py  cleanup_service.py  compliance_checker.py  compliance_state.py  dive_service.py  docker_bench_service.py  docker_client.py  docker_hub.py  dockle_service.py  enhanced_notifier.py  image_compliance_state.py  image_misconfig_state.py  kev.py  kev_service.py  network_check.py  notifier.py  oidc.py  scan_errors.py  scan_events.py  scan_queue.py  scan_state.py  scan_trends.py  scanner_health.py  scheduler.py  settings_manager.py  trivy_compliance_service.py  trivy_health.py  trivy_misconfig_service.py  trivy_scanner.py  user_auth.py
backend/app/services/notifications/: __init__.py  base.py  discord.py  dispatcher.py  email.py  gotify.py  ntfy.py  pushover.py  slack.py  telegram.py
backend/app/utils/: log_redaction.py  path_normalization.py  timezone.py
backend/tests/: README.md  conftest.py  test_api_activity.py  test_api_api_keys.py  test_api_auth.py  test_api_compliance.py  test_api_containers.py  test_api_false_positives.py  test_api_image_compliance.py  test_api_maintenance.py  test_api_notifications.py  test_api_scan_realtime.py  test_api_scans.py  test_api_secrets.py  test_api_settings.py  test_api_system.py  test_api_vulnerabilities.py  test_api_widgets.py  test_authentication.py  test_dependencies_auth.py  test_kev_service.py  test_middleware_edge_cases.py  test_notifier.py  test_path_normalization.py  test_repositories.py  test_scan_workflow_integration.py  test_scheduler.py  test_secret_redaction.py  test_services_activity_logger.py  test_services_cleanup.py  test_services_dispatcher.py  test_services_dive.py  test_services_docker_bench.py  test_services_docker_bench_unit.py  test_services_docker_client.py  test_services_enhanced_notifier.py  test_services_kev.py  test_services_notification_providers.py  test_services_oidc.py  test_services_scan_events.py  (+9 more)
docs/: CODEQL_SCAN_RESULTS.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+87 files in other folders)
