[project]
name = "vulnforge"
version = "2.7.0"
description = "Docker vulnerability scanner and remediation dashboard powered by Trivy"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.6.0",
    "docker>=7.1.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "croniter>=2.0.0",
    "slowapi>=0.1.9",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
