[project]
name = "vulnforge"
version = "4.0.0"
description = "Docker vulnerability scanner and remediation dashboard powered by Trivy"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.121.2",
    "granian>=2.6.0",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.6.0",
    "docker>=7.1.0",
    "httpx>=0.27.0",
    "apscheduler>=3.11.1",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "croniter>=2.0.0",
    "slowapi>=0.1.9",
    "bcrypt>=5.0.0",
    "aiosmtplib>=3.0.0",
    "authlib>=1.3.0",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.8.0",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.14.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
