[project]
name = "vulnforge"
version = "4.2.0"
description = "Docker vulnerability scanner and remediation dashboard powered by Trivy"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.2",
    "granian>=2.7.0",
    "sqlalchemy>=2.0.46",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "apscheduler>=3.11.2",
    "python-dotenv>=1.2.1",
    "aiosqlite>=0.22.1",
    "croniter>=6.0.0",
    "slowapi>=0.1.9",
    "bcrypt>=5.0.0",
    "aiosmtplib>=5.1.0",
    "authlib>=1.6.6",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.11.0",
    "email-validator>=2.3.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"tests/*" = ["S101"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["tests/*", "app/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["app", "tests"]
exclude = ["**/__pycache__", ".venv", "build"]
reportMissingImports = true
reportMissingTypeStubs = false
